--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
 :root {
   --background: #ededed;
   --foreground: #171717;
+  --primary-cyan: #10c3e2;
 }
 
 /* @media (prefers-color-scheme: dark) {
