--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 :root {
   --background: #ededed;
   --foreground: #171717;
-  --primary-cyan: #10c3e2;
+  --light-blue: #10c3e2;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -18,7 +18,11 @@
 } */
 
 body {
+  width: 100dvw;
+  min-height: 100dvh;
+
   color: var(--foreground);
   background: var(--background);
+
   font-family: Arial, Helvetica, sans-serif;
 }
