--- a/app/(main)/MainLayout.module.css
+++ b/app/(main)/MainLayout.module.css
@@ -1,4 +1,4 @@
-.mainLayout {
+.root {
   width: 100dvw;
   min-height: 100dvh;
 
@@ -17,7 +17,7 @@
   grid-row: 2;
 }
 
-.main {
+.content {
   grid-column: 2 / -1;
   grid-row: 2;
 }
