--- a/app/(main)/HomePage.module.css
+++ b/app/(main)/HomePage.module.css
@@ -27,42 +27,33 @@
   overflow-y: scroll;
 }
 
-.card {
-  flex: 0 0 auto;
- 
-  width: 25%;
-  height: fit-content;
+.addMoreStoriesCard {
+  position: relative;
 }
 
-.cardImage {
+.addMoreStoriesCard > :first-child {
+  position: relative;
+  z-index: 0;
+}
+
+.link {
   width: 100%;
   height: 10rem;
 
-  border-radius: 1rem;
-  box-shadow: 4px 4px 4px #00000040;
-
-  background-color: #d9d9d9;
-
   color: #444444;
   font-size: 4rem;
+  text-decoration: none;
 
   display: flex;
   justify-content: center;
   align-items: center;
 
-  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
-.storyDetailAndOptions {
-  margin-top: .5rem;
-  padding: 0 1rem;
-
-  color: #444444;
-
-  display: flex;
-  justify-content: space-between;
-}
-
-.storyDetailAndOptions h4 {
-  cursor: pointer;
+.link:visited {
+  text-decoration: none;
 }
