--- a/app/(main)/story/[storyId]/character/[characterId]/CharacterLayout.module.css
+++ b/app/(main)/story/[storyId]/character/[characterId]/CharacterLayout.module.css
@@ -3,19 +3,16 @@
 
   display: grid;
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: 4fr 1fr;
 }
 
 .tabs {
   grid-column: 1;
   grid-row: 1;
-
-  height: 100%;
 }
 
 .drawings {
   grid-column: 2;
-  grid-row: 1 / -1;
+  grid-row: 1;
 
   box-shadow: -1rem 0rem 1rem #d9d9d9;
 
