fix: fixed user info text color

--- a/app/(main)/components/AuthorInfo/AuthorInfo.module.css
+++ b/app/(main)/components/AuthorInfo/AuthorInfo.module.css
@@ -5,12 +5,13 @@
 }
 
 .link {
+  color: black;
   text-decoration: none;
 }
 
 .link:visited {
   text-decoration: none;
-  color: black
+  color: black;
 }
 
 .leftOrientation {
