--- a/app/(main)/story/[storyId]/character/[characterId]/@attributes/AttributesTab.module.css
+++ b/app/(main)/story/[storyId]/character/[characterId]/@attributes/AttributesTab.module.css
@@ -7,6 +7,9 @@
   margin-bottom: 1rem;
   border-bottom: 1px solid var(--light-blue, #10c3e2);
   font-weight: bold;
+
+  display: flex;
+  justify-content: space-between;
 }
 
 .card {
@@ -78,5 +81,39 @@
 }
 
 .addMore:hover {
+  text-decoration: underline;
+}
+
+.deleteButton {
+  padding: .25rem .5rem;
+  border: none;
+  border-radius: .5rem;
+
+  color: white;
+  font-weight: bold;
+
+  background-color: #e21010;
+}
+
+.deleteButton:hover {
+  text-decoration: underline;
+  background-color: #a21010;
+}
+
+
+
+.saveButton {
+  padding: .25rem .75rem;
+  border: none;
+  border-radius: .5rem;
+
+  color: white;
+  font-weight: bold;
+
+  background-color: var(--light-blue, #10c3e2);
+}
+
+.saveButton:hover {
+  background-color: #0e9db6;
   text-decoration: underline;
 }
