feat: change bg base global color and clear main layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,8 +9,8 @@
 }
 
 :root {
-  --background: #ededed;
-  --foreground: #171717;
+  --background: #f6f6f6;
+  --foreground: #444444;
   --light-blue: #10c3e2;
 }
 
